results/slurm/slurm-12851464.out
Thu Jul 4 19:11:01 EDT 2024: Job 12851464 is allocated resources.
Inside slurm_launcher.slrm (/var/spool/slurmd/job12851464/slurm_script). received arguments: main.py --output-dir results/models/laplace --model-name equiformer_v2 --data-path datasets/qm9 --model-type Laplace --epochs 2 --iterations 30 --seed 0
  File "/h/aguzmanc/3D_Bayes/main.py", line 108
    _log.info(model)
                    ^
IndentationError: unindent does not match any outer indentation level
